--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 </head>
 <body>
 <div id="app">
-    <h1>TEST</h1>
+    <h1 stlye="color:black;text-align:center;">IREM SENİ SATTIĞIM İÇİN ÖZÜR DİLERİM, BARIŞALIM MI</h1>
+    <button style="width:200px;height:80px;background-color:black;padding:10px;text-align:center;color:white;border-radius:10px;">Barışalım</button>
+    <button style="width:200px;height:80px;background-color:black;padding:10px;text-align:center;color:white;border-radius:10px;">Barışalımm (ama 2 m ile)</button>
 </div>
 <script src="app.js"></script>
 </body>
