--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 </head>
 <body>
 <div id="app">
-    <h1 stlye="color:black;text-align:center;">IREM SENİ SATTIĞIM İÇİN ÖZÜR DİLERİM, BARIŞALIM MI</h1>
-    <button style="width:200px;height:80px;background-color:black;padding:10px;text-align:center;color:white;border-radius:10px;">Barışalım</button>
-    <button style="width:200px;height:80px;background-color:black;padding:10px;text-align:center;color:white;border-radius:10px;">Barışalımm (ama 2 m ile)</button>
+    <center><h1 stlye="color:black;text-align:center;">IREM SENİ SATTIĞIM İÇİN ÖZÜR DİLERİM, BARIŞALIM MI</h1></center>
+    <button style="margin-left: 600px;position:absolute;width:200px;height:80px;background-color:black;padding:10px;text-align:center;color:white;border-radius:10px;">Barışalım</button>
+    <button style="margin-left: 300px;position:absoulte;width:200px;height:80px;background-color:black;padding:10px;text-align:center;color:white;border-radius:10px;">Barışalımm (ama 2 m ile)</button>
 </div>
 <script src="app.js"></script>
 </body>
