--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>İREM - MERT - ONUR</title>
+    <title>VueGame</title>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <link rel="stylesheet" href="css/foundation.min.css">
     <link rel="stylesheet" href="css/app.css">
-    <!-- 
-        <section class="row">
+</head>
+<body>
+<div id="app">
+    <section class="row">
         <div class="small-6 columns">
             <h1 class="text-center">Onur</h1>
             <div class="healthbar">
@@ -81,13 +83,6 @@
             </ul>
         </div>
     </section>
-    -->
-</head>
-<body>
-<div id="app">
-    <center><h1 stlye="color:black;text-align:center;">IREM SENİ SATTIĞIM İÇİN ÖZÜR DİLERİM, BARIŞALIM MI</h1></center>
-    <button style="margin-left: 650px;position:absolute;width:200px;height:80px;background-color:black;padding:10px;text-align:center;color:white;border-radius:10px;">Barışalım</button>
-    <button style="margin-left: 400px;position:absoulte;width:200px;height:80px;background-color:black;padding:10px;text-align:center;color:white;border-radius:10px;">Barışalımm (ama 2 m ile)</button>
 </div>
 <script src="app.js"></script>
 </body>
