--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <link rel="stylesheet" href="css/foundation.min.css">
     <link rel="stylesheet" href="css/app.css">
-</head>
-<body>
-<div id="app">
+    <!-- 
     <section class="row">
         <div class="small-6 columns">
             <h1 class="text-center">Onur</h1>
@@ -83,6 +81,11 @@
             </ul>
         </div>
     </section>
+-->
+</head>
+<body>
+<div id="app">
+    <h1>Irem seni seviyorum<h1>
 </div>
 <script src="app.js"></script>
 </body>
